[package]
name = "my-rust-app"
version = "0.1.0"
edition = "2021"
description = "A sample Rust application for testing"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
clap = { version = "4.0", features = ["derive"] }

[dev-dependencies]
mockito = "1.0"
tempfile = "3.0"
pretty_assertions = "1.0"

[build-dependencies]
cc = "1.0"
